--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #d9dcd6;
 }
-
+/*removed all header elements */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -31,10 +31,7 @@ header div {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
-header div ul {
-    list-style-type: none;
-}
+/*Deleted list type none for the header seems redundant */
 
 header div ul li {
     display: inline-block;
@@ -85,7 +82,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/*deleted unnecesary elements named all benefits elements as benefits-margin */
 .benefit-margin {
     margin-bottom: 32px;
     color: #ffffff;
@@ -104,7 +101,7 @@ p {
     max-width: 150px;
 }
 
-
+/*named all elements on html as a single SEO removed the rest*/
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
