--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,10 +28,13 @@ header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-/*Deleted list type none for the header seems redundant */
+
+header div ul {
+    list-style-type: none;
+}
 
 header div ul li {
     display: inline-block;
