--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ header div {
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+/* not exactly sure what this list style type none do but unsure to remove it */
 header div ul {
     list-style-type: none;
 }
@@ -123,13 +123,13 @@ p {
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
