--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ p {
     font-size: 16px;
 }
 
-.hero {
+.hero-image {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -63,7 +63,6 @@ p {
     float: left;
     margin-right: 25px;
 }
-
 .float-right {
     float: right;
     margin-left: 25px;
@@ -82,7 +81,7 @@ p {
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 /*deleted unnecesary elements named all benefits elements as benefits-margin */
@@ -109,7 +108,7 @@ p {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
@@ -122,7 +121,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/*removed footer elements and made it a footer*/
 footer {
     padding: 30px;
     clear: both;
